--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,8 @@
 name: Draft Release
 
+permissions:
+  contents: write
+
 on:
   push:
     tags:
@@ -46,7 +49,7 @@ jobs:
       - name: Create Draft Release from artifacts
         uses: ncipollo/release-action@v1
         with:
-          token: ${{ secrets.RELEASE_TOKEN != '' && secrets.RELEASE_TOKEN || github.token }}
+          token: ${{ secrets.RELEASE_TOKEN || github.token }}
           tag: ${{ github.event.inputs.tag || github.ref_name }}
           name: ${{ github.event.inputs.tag || github.ref_name }}
           draft: true
